# Ledgerful

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  COMMERCIAL-EXCEPTION.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  about.toml  build.rs  deny.toml  review.md
.agents/skills/codex-review/: SKILL.md
.cargo/: config.toml  mutants.toml
.config/: nextest.toml
.github/: CODEOWNERS  RELEASE_NOTES_TEMPLATE.md  dependabot.yml  gitleaks.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ai-review-gate.yml  ci.yml  ledgerful-pr-report.yml  ledgerful-pr-scan.yml  ledgerful.yml  release.yml  security.yml  smoke.yml  windows-path-tests.yml
action/: README.md  action.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json
action/__tests__/: comment.test.ts  github.test.ts  impact.test.ts  install.test.ts
action/fixtures/: impact-clean.json  impact-high.json  impact-low.json
action/src/: comment.ts  github.ts  impact.ts  index.ts  install.ts  runner.ts  types.ts
docs/: AI-CODE-REVIEW-PROTOCOL.md  Engineering.md  Features.md  Frontend-Notes.md  ToDo.md  architecture.md  breaking.md  cross-repo.md  golden-path.md  installation.md  lifecycle-integrity.md  operator-surface-policy.md  package-distribution.md  policy-check.md  pr-scan-schema.md  public-ledger.md  self-timing.md  verify-performance.md
docs/Ledgerful/: skill.md
docs/api/: openapi.json
docs/mappings/: soc2.md
install/: install.ps1  install.sh
mappings/: soc2.toml
mcp-server/: BINARY-LICENSE-NOTICE.md  COMMERCIAL-EXCEPTION.md  README.md  package-lock.json  package.json
mcp-server/lib/: install.js  platform.js  process.js
mcp-server/scripts/: postinstall.js
mcp-server/test/: mcp-frame.js  platform.test.js  smoke-lib.js  smoke-local.js  smoke.test.js
packaging/homebrew/: ledgerful.rb
packaging/scoop/: ledgerful.json
scripts/: bump-manifests.ps1  bump-manifests.sh  check-coordination-paths.mjs  dev_web.ps1  dev_web.sh  pre-commit.ps1  pre-commit.sh  slopsquat-sweep.ps1  smoke_mcp.ps1  smoke_mcp.sh
src/: lib.rs  main.rs  tests.rs
src/ai/: escape.rs  intent_drafter.rs  mod.rs  semantic_extractor.rs
src/bridge/: allowlist.rs  client.rs  import.rs  ipc.rs  mod.rs  notify.rs
src/bridge/client/: client_cli.rs
src/cli/: args.rs  dispatch.rs  mod.rs
src/commands/: ask.rs  ask_routing.rs  bridge.rs  config.rs  config_verify.rs  daemon.rs  data_models.rs  dead_code.rs  demo.rs  dependencies.rs  deploy.rs  doctor.rs  dx1_templates.rs  endpoints.rs  federate.rs  gate.rs  hook_commit_msg.rs  hook_post_commit.rs  hook_repair.rs  hook_sidecar.rs  hotspots.rs  impact.rs  index.rs  init.rs  intent.rs  ledger.rs  ledger_audit.rs  ledger_graph.rs  ledger_re_sign.rs  ledger_register.rs  ledger_stack.rs  mcp.rs  mod.rs  observability.rs  pid.rs  policy_check.rs  reset.rs  scan.rs  scan_pr.rs  schedule.rs  (+11 more)
src/commands/ask/: backend.rs  context.rs  execute.rs  mod.rs  render.rs
src/commands/config/: diff.rs  edit.rs  env.rs  mod.rs  schema.rs  verify.rs  view.rs
src/commands/index/: check.rs  graph.rs  mod.rs  modes.rs  output.rs  repair.rs  (+2 more)
src/config/: defaults.rs  error.rs  load.rs  mod.rs  model.rs  redact.rs  starter.rs  validate.rs
src/contracts/: mod.rs  parser.rs
src/daemon/: handlers.rs  lifecycle.rs  server.rs
src/exec/: boundary.rs  grouped.rs  mod.rs
src/export/: control_mapping.rs  mod.rs  soc2.rs  soc2_control.rs
src/federated/: impact.rs  refresh.rs  scanner.rs  schema.rs
src/gemini/: modes.rs  sanitize.rs  wrapper.rs
src/git/: commit.rs  ignore.rs  metadata.rs  mod.rs  numstat.rs
src/impact/: hotspots.rs  mod.rs  orchestrator.rs  packet.rs  redact.rs  temporal.rs
src/index/: centrality.rs  ci_gates.rs  data_models.rs  graph_loader.rs  incremental.rs  mod.rs  orchestrator.rs  staleness.rs  walker.rs
src/ledger/: adr.rs  chain_iter.rs  crypto.rs  db.rs  drift.rs  error.rs  federation.rs  mod.rs  mode_history.rs  public_export.rs  transaction.rs  types.rs  validators.rs
src/local_model/: client.rs  cloud_policy.rs  context.rs  mod.rs  pruner.rs
src/observability/: mod.rs  openslo.rs  self_timing.rs
src/output/: empty.rs  human.rs  lsp.rs  mod.rs  table.rs  verification.rs
src/platform/: detect.rs  gpu.rs  mod.rs  paths.rs  process_policy.rs  repository.rs  shell.rs  urn.rs
src/policy/: defaults.rs  load.rs  rules.rs
src/retrieval/: query.rs
src/scip/: orchestrator.rs  symbol_table.rs
src/search/: stream_indexer.rs
src/semantic/: vector_store.rs
src/state/: layout.rs  locks.rs  migration_prompt.rs  mod.rs  reports.rs  rollup.rs  storage.rs  storage_cozo.rs
src/sync/: apply.rs  bundle.rs  crypto.rs  error.rs  extract.rs  hlc.rs  mod.rs  state.rs  transport.rs
src/ui/: intent_tui.rs
src/util/: mod.rs  path.rs  term.rs  text.rs  which.rs
src/verify/: auto_policy.rs  engine.rs  ipc_verify.rs  mod.rs  plan.rs  predictor.rs  results.rs  runner.rs  suggestions.rs  timeouts.rs
src/watch/: debounce.rs  filters.rs
templates/: arc_diagram.html
tests/ci/: allowlist.rs  install_docs_truth.rs
tests/compile_fail/: config_model_submodule.rs  config_model_submodule.stderr  private_helper_leak.rs  private_helper_leak.stderr  private_submodule_path.rs  private_submodule_path.stderr
tests/integration/: adr_lifecycle.rs  ask_auto_scan.rs  ask_kg_fallback.rs  ask_structural_queries.rs  binstall_metadata.rs  bridge_ask_tests.rs  bridge_export_tests.rs  bridge_import_tests.rs  bridge_ipc_tests.rs  bridge_lineage_tests.rs  bridge_notify_tests.rs  bridge_query_tests.rs  bridge_tests.rs  bump_manifests.rs  cargo_lock_orphan_pruning.rs  cedar_orphan_pruning.rs  ci_prediction.rs  cli_ask.rs  cli_audit.rs  cli_binary.rs  cli_config.rs  cli_config_set.rs  cli_dead_code.rs  cli_dead_code_prune.rs  cli_dependencies.rs  cli_doctor.rs  cli_dx1_prompts.rs  cli_dx7_config_hints.rs  cli_federate.rs  cli_hook_repair.rs  cli_hotspots.rs  cli_hotspots_explain.rs  cli_impact.rs  cli_index.rs  cli_init.rs  cli_ledger_graph.rs  cli_migration_prompt.rs  cli_reset.rs  cli_scan.rs  cli_search.rs  (+96 more)
tests/unit/: transport.rs
(+124 files in other folders)
