[package]
name = "ledgerful"
version = "0.1.9"
edition = "2024"
license-file = "LICENSE"
description = "Local-first change intelligence CLI for deterministic impact analysis and verification"
homepage = "https://github.com/Ryan-AI-Studios/Ledgerful"
repository = "https://github.com/Ryan-AI-Studios/Ledgerful"
readme = "README.md"

# Prebuilt install via `cargo binstall --git https://github.com/Ryan-AI-Studios/Ledgerful`
# Maps to the same GitHub release archives used by brew/scoop/winget (no crates.io publish).
[package.metadata.binstall]
# Unix assets: ledgerful-{target}.tar.gz containing ledgerful-{target}/ledgerful
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
# Keep compile as fallback; skip third-party quickinstall mirrors.
disabled-strategies = ["quick-install"]

# Windows release asset is a portable .zip with ledgerful.exe at archive root
# (see release.yml Compress-Archive of dist/{asset}/* contents).
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "1.1.2"
toml_edit = "0.25.12"
cozo = { git = "https://github.com/Ryan-AI-Studios/cozo-redux", rev = "14179d306d72079fac55d93562a84ee605087989", default-features = false, features = ["storage-sqlite", "graph-algo", "rayon"] }
rayon = "=1.10"

anyhow = "1.0.102"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

notify-debouncer-full = "0.7.0"
globset = "0.4.18"

camino = { version = "1.2.2", features = ["serde1"] }

rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
rusqlite_migration = "2.6.0"

uuid = { version = "1.23", features = ["v4", "serde"] }
gix = "0.84.0"

regex = "1.12"
regex-syntax = "0.8"
parking_lot = "0.12"

tantivy = "0.26.1"
crossbeam = "0.8"
encoding_rs = "0.8"

tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
chrono = { version = "0.4.44", features = ["serde"] }
wait-timeout = "0.2"
comfy-table = "7.1"
indicatif = "0.18"
ctrlc = "3.4"
sysinfo = "0.39"

# Daemon dependencies
tokio = { version = "1.43", features = ["rt-multi-thread", "io-std", "macros", "sync", "time", "signal"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }
webbrowser = { version = "1.0", optional = true }
tower-lsp-server = { version = "0.23.0", optional = true }
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"], optional = true }
rust-embed = { version = "8.11.0", optional = true, features = ["include-exclude"] }
mime_guess = { version = "2.0.5", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
blake3 = "1.8"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
pulldown-cmark = { version = "0.13", default-features = false }
dunce = "1.0.5"
path-clean = "1.0.1"
fs4 = "=0.13.1"
ureq = { version = "2", features = ["json"] }
url = "=2.5.8"
tree-sitter-go = "0.25.0"
scip = "0.8.1"
protobuf = "3.7"
ratatui = "0.30.0"
crossterm = "0.29.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
ignore = "0.4.25"
inquire = "0.9.4"
strum = { version = "0.28.0", features = ["derive"] }
cedar-policy = "4.11.0"
tempfile = { version = "3", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
subtle = "2"
zeroize = { version = "1", optional = true }
rpassword = { version = "7", optional = true }
zip = { version = "8", default-features = false, features = ["deflate"], optional = true }
base64 = "0.22"
dirs = "6.0.0"
which = "8.0.3"
jsonc-parser = { version = "0.32.4", features = ["serde", "serde_json"] }
utoipa = { version = "5.5.0", features = ["axum_extras"], optional = true }
process-wrap = { version = "9.1.0", features = ["std", "job-object", "process-group"] }


[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["signal", "process", "fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_Com"] }
windows-sys = { version = "0.61", features = ["Win32_System_Pipes", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_JobObjects"] }

[features]
default = ["viz-server", "mcp", "web", "export", "self-timing"]
export = ["dep:zip"]
daemon = ["dep:tower-lsp-server", "dep:tokio"]
viz-server = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:webbrowser"]
web = ["dep:axum", "dep:tower", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:webbrowser", "dep:serde_urlencoded", "dep:zip", "dep:tokio", "dep:utoipa", "export"]
openapi = ["web"]
sync = ["dep:chacha20poly1305", "dep:argon2", "dep:zeroize", "dep:rpassword", "dep:zip", "dep:tempfile"]
mcp = []
usage-metrics = []
# Local-only command self-timing capture (Track 0043). Migration is unconditional;
# this flag gates the auto-capture hook + TimingLayer registration.
self-timing = []

[lib]
name = "ledgerful"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
rstest = "0.26.1"
serial_test = "3.5.0"
proptest = "1"
reqwest = { version = "0.13.4", features = ["rustls"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
filetime = "0.2"

# Unix-only stdout-capture helpers for integration tests (gated by #[cfg(unix)]
# in the test source); required so the unix test target compiles on macOS/Linux.
[target.'cfg(unix)'.dev-dependencies]
os_pipe = "1.2"
libc = "0.2"

[patch.crates-io]
sqlite3-sys = { path = "./vendor/sqlite3-sys" }



[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "ci"
path = "tests/ci/allowlist.rs"

[[bin]]
name = "ledgerful"
path = "src/main.rs"

[profile.mutants]
inherits = "test"
debug = 0
strip = "debuginfo"
